--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <label for="file">Wybierz plik:</label><br/>
         <input id="file" name="file" type="file"><br/><br/>
         
-        <input type="button" value="Wyślij">
+        <input type="submit" value="Wyślij">
 
     </form>
     
