--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <form action="https://formspree.io/darekr1992@interia.p" method="post">
+    <form action="https://formspree.io/darekr1992@interia.pl" method="post">
         <label for="first_name">Imię:</label><br/>
         <input id="first_name" name="first_name" type="text"><br/>
         
